--- a/client/partials/index.html
+++ b/client/partials/index.html
@@ -2,9 +2,9 @@
     <div class="topNavBar">
         
     </div>
-    <div class="sideNavBar">
-        
-    </div>
+    <side-nav-bar>
+    </side-nav-bar>
+
     <div class="mainWindow">
         
     </div>
