--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -21,6 +21,7 @@ div.sideNavBar {
     width: 160px;
     border: 2px solid blue;
     background: gray;
+    vertical-align: top;
 }
 
 div.mainWindow {
@@ -28,4 +29,17 @@ div.mainWindow {
     width: 1300px;
     background: lightgray;
     border: 2px solid green;
+}
+div.addGear {
+    min-width: 120px;
+    min-height: 200px;
+    border: 3px solid black;
+    border-radius: 15px;
+    padding: 15px;
+    display: inline-block;
+}
+div.addGearControlBar {
+    display: block;
+    border: 2px solid black;
+    
 }
