added amazon API lookup

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -37,6 +37,7 @@ div.addGear {
     border-radius: 15px;
     padding: 15px;
     display: inline-block;
+    vertical-align: top;
 }
 div.addGearControlBar {
     display: block;
