--- a/client/partials/camerasList.html
+++ b/client/partials/camerasList.html
@@ -7,10 +7,13 @@
         <p>Type 
             <select ng-model="camera.type">
                 <option value="DSLR">DSLR</option>
-                <option value="PnS">Point & Shoot</option>
-                <option value="FilmSLR">Film SLR</option>
-                <option value="FilmPnS">Film Point & Shoot</option>
-                <option value="Action">Action Camera</option>
+                <option value="Mirrorless">Mirrorless</option>
+                <option value="Rangefinder">Rangefinder</option>
+                <option value="Medium Format">Medium Format</option>
+                <option value="Point & Shoot">Point & Shoot</option>
+                <option value="Film SLR">Film SLR</option>
+                <option value="Film Point & Shoot">Film Point & Shoot</option>
+                <option value="Action">Action</option>
             </select>
         </p>
         <p>Name <input type="text" ng-model="camera.name"></p>
@@ -26,11 +29,16 @@
                 <option value="PnS">Point and Shoot</option>
             </select>
         </p>
-        <p>Mountable: <span ng-repeat="(mount, enabled) in mounts"><input type="checkbox" ng-model="mounts[mount]">{{mount}} |</span></p>
+        <p>Mountable: |<span ng-repeat="(mount, enabled) in mounts"><input type="checkbox" ng-model="mounts[mount]">{{mount}} |</span></p>
+        <p>Fixed Lens: <input type="text" ng-model="camera.fixedLens"></p>
+        <p>35mm Equivalent: <input type="text" ng-model="camera.equivLens"></p>
         <p>Weight <input type="number" ng-model="camera.weight"></p>
         <p>Price $<input type="number" step=0.01 ng-model="camera.price"></p>
         <p>Year Released <input type="number" ng-model="camera.year"></p>
         <p>Quarter Released <input type="number" ng-model="camera.quarter"></p>
+        <p>Amazon Keywords <input type="string" ng-model="camera.amazonKeywords"></p>
+        <p>Amazon ASIN <input type="string" ng-model="camera.amazonASIN"></p>
+            
         <button type="submit">Add Camera</button>
     </form>
     <p style="color:red" ng-repeat="error in errors">
