added amazon checker and more details to camera and lens models

--- a/client/partials/camerasList.html
+++ b/client/partials/camerasList.html
@@ -2,8 +2,8 @@
 {{manufacturer.name}}
 
 <div class="cameraInput" style="border: 2px solid black; padding: 10px;">
-    <h4>Add Camera</h4>
     <form ng-submit="addCamera()">
+        <p>_id <input type="text" ng-model="camera._id" disabled></p>
         <p>Type 
             <select ng-model="camera.type">
                 <option value="DSLR">DSLR</option>
@@ -36,10 +36,12 @@
         <p>Price $<input type="number" step=0.01 ng-model="camera.price"></p>
         <p>Year Released <input type="number" ng-model="camera.year"></p>
         <p>Quarter Released <input type="number" ng-model="camera.quarter"></p>
-        <p>Amazon Keywords <input type="string" ng-model="camera.amazonKeywords"></p>
-        <p>Amazon ASIN <input type="string" ng-model="camera.amazonASIN"></p>
-            
-        <button type="submit">Add Camera</button>
+        <p>Amazon Keywords <input type="text" ng-model="camera.amazonKeywords"></p>
+        <p>Amazon ASIN <input type="text" ng-model="camera.amazonASIN"></p>
+        <p>gearboxPic <input type="text" ng-model="camera.gearboxPic"></p>
+        <p><img ng-src="{{camera.gearboxPic}}"></p>
+        <button type="submit">Submit</button><br>
+        <button type="button" ng-click="clearCameraForm()">Clear Form</button>
     </form>
     <p style="color:red" ng-repeat="error in errors">
         {{error}}
@@ -59,7 +61,8 @@
                 <th>Weight</th>
                 <th>Price</th>
                 <th>Year - Quarter</th>
-                <th>Action</th>
+                <th>Edit</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -74,6 +77,7 @@
                 <td>{{camera.weight}}</td>
                 <td>{{camera.price}}</td>
                 <td>{{camera.year}} - {{camera.quarter}}</td>
+                <td><button ng-click="editCamera(camera)">Edit</button></td>
                 <td><button ng-click="deleteCamera(camera._id)">Delete</button></td>
             </tr>
         </tbody>
