--- a/client/partials/amazonAPIchecker.html
+++ b/client/partials/amazonAPIchecker.html
@@ -2,7 +2,7 @@
 <form ng-submit="checkAmazonItem()">
     <p>ASIN# <input type="text" ng-model="ASIN"> <button type="submit">Check</button></p>
 </form><br>
-<img src="{{imageURL}}">
+<img ng-src="{{imageURL}}">
 
 <h2>All images</h2>
 <div class="amazonImage" style="padding: 5px; border: 2px solid black" ng-repeat="image in images">
