--- a/client/partials/gearbox.html
+++ b/client/partials/gearbox.html
@@ -1,3 +1,4 @@
+
 <div class="container">
     <div class="topNavBar">
         
@@ -6,26 +7,97 @@
     </side-nav-bar>
 
     <div class="mainWindow">
-        <div class="gearboxCameras">
-            <div class="gearItem" ng-repeat="camera in cameras">
-                <h3>{{camera.name}}</h3>
-                <img class="gearItem" ng-src="{{camera.fk_camera.gearboxPic}}">
+        <div class="gearboxCameras gearboxRow">
+            <h2>Cameras</h2>
+            
+<!--            Sample Flippable draggable card-->
+            <div class="flippable" ng-repeat="camera in cameras" draggable>
+                <div class="flipCard" dblclickflip>
+                    <div class="gearItem gearboxItem flipFront">
+                        <h3>{{camera.name}}</h3>
+                        <img class="gearItem" ng-src="{{camera.fk_camera.gearboxPic}}">
+                    </div>
+                    <div class="gearItem gearboxItem flipBack">
+                        <h3>back</h3>
+                        <img class="gearItem" ng-src="{{camera.fk_camera.gearboxPic}}">
+                    </div>
+                </div>
+            </div>
+<!--            Sample Flippable draggable card-->            
+            
+            <div class="addGearboxItem">
+                <form ng-show="addCameraWindow">
+                    <input type="hidden" ng-model="newCamera.type" value="camera">
+                    <p>Name: <input type="text" ng-model="newCamera.name"></p>
+                    <table>
+                        <tr>
+                            <td>Manufacturer: </td>
+                            <td>
+                                <select ng-model="cameraManufacturerID" ng-change="changeCameraManufacturer()">
+                                    <option value="custom">Custom</option>
+                                    <option ng-repeat="manufacturer in manufacturers" value="{{manufacturer._id}}">{{manufacturer.name}}</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Type: </td>
+                            <td>
+                                <select ng-model="targetCamera.type" ng-change="changeCameraManufacturer()">
+                                    <option value="custom">Custom</option>
+                                    <option ng-repeat="type in types" value="{{type}}">{{type}}</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Cameras: </td>
+                            <td>
+                                <select ng-model="newListCamera" ng-change="updateNewCameraPicture()">
+                                    <option ng-repeat="listCamera in targetCameras" value="{{listCamera._id}}<->{{listCamera.gearboxPic}}">{{listCamera.name}}</option>
+                                </select>
+                            </td>
+                        </tr>
+                    </table>
+                    <button type="submit">Submit</button>
+                </form>
+                <img class="gearItem" ng-src="{{newCameraPic}}">
+                <button type="button" ng-click="toggleAddCamera()" ng-show="!addCameraWindow">Add Camera</button>
+                <button type="button" ng-click="toggleAddCamera()" ng-show="addCameraWindow">Cancel</button>
             </div>
         </div>
         
-        <div class="gearboxLenses">
+        <div class="gearboxLenses gearboxRow">
+            <h2>Lenses</h2>
+<!--            Original lens divs-->
+<!--
             <div class="gearItem" ng-repeat="lens in lenses">
                 <h3>{{lens.name}}</h3>
                 <img class="gearItem" ng-src="{{lens.fk_lens.gearboxPic}}">
             </div>
-        </div>
-        
-        <div class="gearboxBags">
+-->
+            
+<!--            New flippable lens cards-->
+            <div class="flippable" ng-repeat="lens in lenses" draggable>
+                <div class="flipCard" dblclickflip>
+                    <div class="gearItem gearboxItem flipFront">
+                        <h3>{{lens.name}}</h3>
+                        <img class="gearItem" ng-src="{{lens.fk_lens.gearboxPic}}">
+                    </div>
+                    <div class="gearItem gearboxItem flipBack">
+                        <h3>back</h3>
+                        <img class="gearItem" ng-src="{{lens.fk_lens.gearboxPic}}">
+                    </div>
+                </div>
+            </div>
+<!--            New flippable lens cards-->
             
         </div>
         
-        <div class="accessories">
-            
+        <div class="gearboxBags gearboxRow">
+            <h2>Bags</h2>
+        </div>
+        
+        <div class="accessories gearboxRow">
+            <h2>Accessories</h2>
         </div>
         
 <!--
@@ -34,6 +106,7 @@
         </div>
         <button type="button" ng-click="addItemWindow()">Add Item</button>
 -->
+<!--
         <div class="addCamera addGear" ng-show="addCameraWindow">
             <h3>Add Camera</h3>
             <form ng-submit="addGearboxCamera()">
@@ -133,4 +206,8 @@
             <button type="button" ng-click="clearGearboxLenses()">Clear Lenses</button>
         </div>
     </div>
+-->
+</div>
+<div style="background: green; width: 120px; height: 120px" droppable>
+    <h2>Drop Here</h2>
 </div>
